--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,8 @@ name: ci
 on:
   push:
     branches:
-      - main
-#  schedule:
-#    - cron: "0 0 * * *"
+      - main  schedule:
+    - cron: "0 * * * *"
 
 jobs:
   autogreen:
@@ -20,8 +19,8 @@ jobs:
 
       - name: Auto green
         run: |
-          git config --local user.email "justjavac@gmail.com"
-          git config --local user.name "${{ github.actor }}"
+          git config --local user.email "1747813950@qq.com"
+          git config --local user.name "${{ zeuio }}"
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git pull --rebase
           git commit --allow-empty -m "a commit a day keeps your girlfriend away"
